--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+}
+
+html {
+  background-image: url("/assets/couple-hiking.jpg");
+  height: 100vh;
+  background-size: cover;
+}
