--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -8,19 +8,21 @@ body {
 
 section {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   flex-wrap: wrap;
   border: 2px solid white;
   border-radius: 5px;
-  width: 95%;
-  height: 80%;
+  width: auto;
+  margin: 20px;
+  height: auto;
+  margin-top: 100px;
   background-color: rgba(255, 255, 255, 0.567);
 }
 
 div {
   display: flex;
   flex-direction: column;
-  width: 300px;
+  width: 500px;
   color: #293241;
   padding: 10px;
 }
